# MS-ReID

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
core/: __init__.py
core/config/: defaults.py
core/data/: build.py
core/data/datasets/: cuhk03.py  dukemtmcreid.py
core/engine/: inference.py  trainer.py
core/scripts/baseline/test/: test_baseline_dukemtmc.sh  test_baseline_market.sh
core/scripts/baseline/train/: train_baseline_dukemtmc.sh  train_baseline_market.sh
core/storage/outputs/baseline/test/dukemtmc/: log.txt
core/storage/outputs/baseline/test/market1501/: log.txt
core/storage/outputs/baseline/train/dukemtmc/: log.txt
core/storage/outputs/baseline/train/market1501/: log.txt
core/tests/: lr_scheduler_test.py
core/tools/: test.py  train.py
core/utils/: checkpoint.py  logger.py  reid_metric.py
